Quick Fix: Hide scrollbar for chrome

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -101,6 +101,10 @@ body {
                     height: 64px;
                 }
             }
+
+            &::-webkit-scrollbar {
+                display: none;
+            }
         }
     }
 }
